--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -118,5 +118,5 @@
   <div class="main-content-wrap"> <!-- closed in foot.html -->
     <div class="main-content">    <!-- closed in foot.html -->
       <div class="main-header">
-        <a id="github" href="https://github.com/Mathepia/MathepiaPrograms">MathepiaPrograms on GitHub</a>
+        <a id="github" href="https://github.com/Song921012/MyProjects">MyProjects on GitHub</a>
       </div>
